--- a/DL_mini_project_final_notebook.ipynb
+++ b/DL_mini_project_final_notebook.ipynb
@@ -415,7 +415,7 @@
     "\n",
     "    # load best model weightsssss\n",
     "    model.load_state_dict(best_model_wts)\n",
-    "    return model"
+    "    return train_losses, valid_losses, train_acc, valid_acc, model"
    ]
   },
   {
