--- a/DL_mini_project_final_notebook.ipynb
+++ b/DL_mini_project_final_notebook.ipynb
@@ -486,7 +486,7 @@
     "\n",
     "# Plotting the Loss for train and validation\n",
     "plt.figure(figsize=(10, 10))\n",
-    "df[['train_loss', 'valid_loss']].plot()\n",
+    "results_df[['train_loss', 'valid_loss']].plot()\n",
     "plt.xlabel(\"Number of Epochs\")\n",
     "plt.ylabel(\"Loss\")\n",
     "plt.title(\"Train VS Validation Loss\")\n",
@@ -494,7 +494,7 @@
     "\n",
     "# Plotting the accuracy for train and validation\n",
     "plt.figure(figsize=(10, 10))\n",
-    "df[['train_acc', 'valid_acc']].plot()\n",
+    "results_df[['train_acc', 'valid_acc']].plot()\n",
     "plt.xlabel(\"Number of Epochs\")\n",
     "plt.ylabel(\"Accuracy\")\n",
     "plt.title(\"Train VS Validation Accuracy\")\n",
